--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <artifactId>guice</artifactId>
             <version>7.0.0</version>
         </dependency>
+
+        <!-- Jackson -->
+         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version>
+         </dependency>
     </dependencies>
 
 </project>  
