--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,20 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.2</version>
          </dependency>
+
+         <!-- MySQL Connector -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.2.0</version>
+        </dependency>
+
+        <!-- HikariCP (Connnection Pool) -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>  
